# gltest

./: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake
include/: loadShader.hpp
src/: fragmentShader.glsl  gltest.cpp  loadShader.cpp
